# NeuronLake

./: .gitignore  Cargo.toml  ChangeOrder.md  LICENSE  PRD.md  README.md  mise.toml  pyproject.toml  verify.py
.github/workflows/: release.yml
docs/: expert-sharing.md  index.html  neuronguard.html  neuronlake-router-proxy-direction.md  search.js
docs/neuronguard/: neuronguard.html  tabular.html  text.html  tokenizer.html  vocab.html
example/amazon_reviews/: download_data.py  main.py  mise.toml
example/continual_learning/: main.py  mise.toml
example/continuous_learning/: main.py  mise.toml
example/diagnostics_mode/: main.py  mise.toml
example/fraud_scanner/: README.md  main.py  mise.toml
example/getting_started_batch/: main.py  mise.toml
example/getting_started_tabular/: main.py  mise.toml
example/getting_started_text/: main.py  mise.toml
example/higgs_boson/: download_data.py  main.py  mise.toml
example/machine_unlearning/: main.py  mise.toml
example/neuronlake_mvp/: README.md  lake.yaml  mise.toml  request-code.json  request-general.json
example/opencode_neuronlake/: .gitignore  README.md  mise.toml  opencode.json  request-opencode.json
example/opencode_neuronlake/prompts/: neuronlake-mvp-agent.md
example/opencode_neuronlake/sample/: buggy-counter.ts
example/sparse_embeddings/: main.py  mise.toml
example/stackoverflow/: download_data.py  main.py  mise.toml
example/team_composition/: main.py  mise.toml
example/wikipedia_classifier/: README.md  main.py  mise.toml
examples/: neuronlake_mvp.rs
neuronguard/: __init__.py  tabular.py  text.py  tokenizer.py  vocab.py
openspec/: config.yaml
src/: chat_server.rs  expert_package.rs  expert_router.rs  guard.rs  lake_config.rs  lib.rs  local_backend.rs  memory.rs  neuron_guard.rs  queue.rs  run.rs  train.rs
tests/: test_sdk.py
(+52 files in other folders)
