[package]
name = "neuronguard"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam-channel = "0.5.12"
rayon = "1.8"
memmap2 = "0.9"
rand = "0.8"
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
pyo3 = { version = "0.21", features = ["experimental-declarative-modules"] }

[features]
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]

[lib]
name = "neuronguard"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
