[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "neuronguard"
version = "0.2.0"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.maturin]
# Mixed Rust/Python project: maturin will place the compiled .so
# inside the neuronguard/ package directory alongside the Python SDK.
python-source = "."
module-name = "neuronguard.neuronguard"
